@startuml

class Usuario {
  -int id
  -String nombre
  -String usuario
  -String password
  -String rol
  -boolean activo
  +getNombre()
  +getRol()
}

class Mesa {
  -int id
  -int numero
  -int capacidad
  -String estado
  +getNumero()
  +getEstado()
}

class Producto {
  -int id
  -String nombre
  -double precio
  -String categoria
  -boolean disponible
  +getPrecio()
  +getCategoria()
}

class Pedido {
  -int id
  -int idMesa
  -int idUsuario
  -String estado
  -double total
  +getTotal()
  +getEstado()
}

class LineaPedido {
  -int id
  -int idPedido
  -int idProducto
  -int cantidad
  -double subtotal
  +getSubtotal()
}

class UsuarioDAO {
  +login()
  +obtenerTodos()
  +insertar()
  +actualizar()
  +eliminar()
}

class MesaDAO {
  +obtenerTodas()
  +insertar()
  +actualizar()
  +eliminar()
  +actualizarEstado()
}

class PedidoDAO {
  +crearPedido()
  +agregarLinea()
  +obtenerLineas()
  +cerrarPedido()
}

class ProductoDAO {
  +obtenerTodos()
  +insertar()
  +actualizar()
  +eliminar()
}

UsuarioDAO ..> Usuario
MesaDAO ..> Mesa
PedidoDAO ..> Pedido
PedidoDAO ..> LineaPedido
ProductoDAO ..> Producto
Pedido --> Mesa
Pedido --> Usuario
LineaPedido --> Pedido
LineaPedido --> Producto

@enduml